# computer-vision-datasets-in-agriculture

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_INDEX.md  README.md  docker-compose.fulltext.full.yml  docker-compose.fulltext.yml  opencode.json  pyproject.toml
.opencode/agents/: document-processor.md  evidence-ranker.md  fulltext-acquirer.md  fulltext-reviewer.md  paper-screener.md  repo-auditor.md  workflow-maintainer.md
.opencode/commands/: acquire-fulltext.md  audit-corpus.md  (+16 more)
agri_cv_opencode_workflow_package/: AUDIT_REPORT.md  GITIGNORE_ADDITIONS.txt  MIGRATION_PLAN.md  PACKAGE_MANIFEST.json  README_INSTALL.md  SHA256SUMS.txt  START_HERE.md  USAGE_GUIDE.md  VALIDATION_REPORT.md  install.ps1  install.py
config/: README.md  fulltext.toml  fulltext_ranking.toml  screening_protocol_v1.md  seed_corrections.csv
datasets-papers-2026-07-03/: agri_cv_paper_download_links_curated.md
outputs/: README.md
references/: README.md  underutilized-agri-cv-datasets-deep-research-2026-07-03.md
tests/: test_inventory.py
tools/fulltext_pipeline/: README.md  pyproject.toml
tools/fulltext_pipeline/src/agri_fulltext/: __init__.py  acquisition.py  cli.py  config.py  http_client.py  io_utils.py  models.py  preflight.py  processing.py  queueing.py  resolvers.py  reviewing.py  schema.py  state.py  xml_extract.py
tools/fulltext_pipeline/tests/: test_cooldown.py  test_docling_command_policy.py  test_preflight_import.py  test_processing_xml.py  test_queueing.py  test_redaction.py  test_resolvers.py  test_reviewing.py  test_visual_preservation.py  test_xml_extract.py
(+313 files in other folders)
